Both the templates and js are now combined in one js file

--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -8,7 +8,7 @@
   function notify() {
     return {
       init() {
-        console.log('Notify component loaded');
+        console.log('Nav component loaded');
       }
     }
   }
